feat: DB Docker 이미지 작성 및 실행을 위한 Compose yml 작성

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+./docker_db/.env
+./docker_db/.env.db
+
 HELP.md
 .gradle
 build/
@@ -87,12 +90,6 @@ cmake-build-*/
 
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
-
-# File-based project format
-*.iws
-
-# IntelliJ
-out/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
