--- a/docker_db/.env
+++ b/docker_db/.env
@@ -6,7 +6,7 @@
 DB_IMAGE=digest_db
 DB_VERSION=latest
 DB_HOST=0.0.0.0 # 외부 DB와 연결하고 싶을 때 DB IP 입력
-DB_ENV_FILE=.env.db.postgres
+DB_ENV_FILE=.env.db
 
 # Ports
 DB_PORT_IN=5432
