--- a/docker_db/.env
+++ b/docker_db/.env
@@ -1,13 +1,15 @@
-# .env
-# IMAGE=<registry URL>/<namespace>/<project>/<image>
-# VERSION=<tag>
+# .env for PostgreSql
+WORKDIR=/usr/src/app
 
 # DB Configuration
-DB_IMAGE=digest_db
-DB_VERSION=latest
-DB_HOST=0.0.0.0 # 외부 DB와 연결하고 싶을 때 DB IP 입력
+DB_HOST=db_instance # 외부 DB와 연결하고 싶을 때 DB IP 입력
 DB_ENV_FILE=.env.db
-
-# Ports
 DB_PORT_IN=5432
 DB_PORT_OUT=5432
+DB_IMAGE=digest_db
+DB_IMAGE_VERSION=latest
+DB_DEFAULT_PATH=/var/lib/postgresql/data
+
+# Ports
+APP_PORT_IN=8080
+APP_PORT_OUT=8080
